# api-gateway/internal/http/docs/swagger.json
@@ -59,6 +59,52 @@
                 }
             }
         },
+        "/attachment/my-uploads": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Retrieves all attachments associated with the authenticated user.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "07-Attachments"
+                ],
+                "summary": "Get my uploads",
+                "responses": {
+                    "200": {
+                        "description": "Attachments retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/genproto.AttachmentGetAllRes"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Attachments not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/attachment/{id}": {
             "delete": {
                 "security": [
@@ -610,6 +656,12 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Search query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "Filter by sender ID",
                         "name": "sender_id",
                         "in": "query"
@@ -636,6 +688,12 @@
                         "type": "boolean",
                         "description": "Filter by starred status",
                         "name": "is_starred",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by if it is in trash",
+                        "name": "is_trashed",
                         "in": "query"
                     },
                     {
@@ -1193,19 +1251,31 @@
                     },
                     {
                         "type": "boolean",
+                        "description": "Filter by if it is in trash",
+                        "name": "is_trashed",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter by draft status",
+                        "name": "is_draft",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
                         "description": "Filter by starred status",
                         "name": "is_starred",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Filter by sent date (from)",
+                        "description": "Filter by sent date (from). syntax: 2024-09-07T12:18:28+00:00",
                         "name": "sent_from",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Filter by sent date (to)",
+                        "description": "Filter by sent date (to). syntax: 2024-09-07T12:18:28+00:00",
                         "name": "sent_to",
                         "in": "query"
                     },
@@ -1267,7 +1337,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/genproto.OutboxMessageSentReq"
+                            "$ref": "#/definitions/genproto.OutboxMessageSentBody"
                         }
                     }
                 ],
@@ -1941,6 +2011,9 @@
         "genproto.AttachmentCreateRes": {
             "type": "object",
             "properties": {
+                "file_id": {
+                    "type": "string"
+                },
                 "file_url": {
                     "type": "string"
                 }
@@ -1977,6 +2050,20 @@
                 },
                 "mime_type": {
                     "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "genproto.AttachmentIdsWrapper": {
+            "type": "object",
+            "properties": {
+                "attachment_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -2130,10 +2217,7 @@
             "type": "object",
             "properties": {
                 "attachment_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
+                    "$ref": "#/definitions/genproto.AttachmentIdsWrapper"
                 },
                 "body": {
                     "type": "string"
@@ -2183,17 +2267,6 @@
                     "$ref": "#/definitions/genproto.Receivers"
                 },
                 "subject": {
-                    "type": "string"
-                }
-            }
-        },
-        "genproto.OutboxMessageSentReq": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "$ref": "#/definitions/genproto.OutboxMessageSentBody"
-                },
-                "sender_id": {
                     "type": "string"
                 }
             }
